test/spec_vectors/load64/fail/module_24.wat
(module (memory i64 1) (func $load32_s_i64 (i64.load32_s (i64.const 0))))